# TP_final-2025c2-Grupo20

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  installer.sh  liberty.yaml  liberty_city.yaml  liberty_city_con_checkpoints.yaml  liberty_city_original_con_checkpoints_y_posinciales.yaml  taller_client  taller_editor  taller_server
.qt/: QtDeploySupport.cmake
client/: CMakeLists.txt  Makefile  carselectscreen.cpp  carselectscreen.h  client.cpp  client.h  clientReceiver.h  clientSender.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  client_sprites.cpp  client_sprites.h  cmake_install.cmake  game_window.cpp  game_window.h  lobbyscreen.cpp  loginscreen.cpp  loginscreen.h  loginscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.cpp  receiver.h  sender.cpp  sender.h
client/Pantallas/: carselectscreen.ui  lobbyscreen.cpp  lobbyscreen.h  lobbyscreen.ui  lobbyscreen.ui.autosave  loginscreen.cpp  loginscreen.h  loginscreen.ui
common/: CMakeLists.txt  Makefile  clientCommand.h  cmake_install.cmake  constants.h  gameState.h  lobbyCommand.h  lobbyState.h  match_list.h  queue.h  serverState.h  socket.cpp  thread.h  wrap_socket.cpp
editor/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
server/: CMakeLists.txt  Makefile  acceptor.cpp  acceptor.h  car.cpp  car.h  client_handler.cpp  client_handler.h  cmake_install.cmake  collisions_listener.cpp  collisions_listener.h  entity.h  gameloop.cpp  gameloop.h  match.cpp  match.h  queues_monitor.cpp  queues_monitor.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h  server_main.cpp  server_protocol.cpp  server_protocol.h  wall.cpp  wall.h
server/data/: liberty_city.yaml  san_andreas.yaml  vice_city.yaml
server/world_entities/: car.cpp  car.h  checkpoint.cpp  checkpoint.h  entity.h  wall.cpp  wall.h
taller_client_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
taller_client_autogen/7EM65HM6UG/: moc_client_receiver.cpp  moc_client_receiver.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
taller_client_autogen/T3UPSIC22E/: moc_carselectscreen.cpp  moc_carselectscreen.cpp.d  moc_lobbyscreen.cpp  moc_lobbyscreen.cpp.d  moc_loginscreen.cpp  moc_loginscreen.cpp.d
taller_client_autogen/include/: ui_carselectscreen.h  ui_lobbyscreen.h  ui_loginscreen.h  ui_mainwindow.h
taller_editor_autogen/: deps  mocs_compilation.cpp
taller_editor_autogen/3HAKN7MTYQ/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
taller_server_autogen/: deps
